# rustyman

./: CLAUDE.md  Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cert/: mod.rs
src/config/: mod.rs
src/proxy/: handler.rs  mod.rs  tls.rs
src/rules/: header.rs  map_local.rs  map_remote.rs  mod.rs
src/traffic/: mod.rs
src/web/: api.rs  mod.rs  websocket.rs
static/: app.js  index.html  style.css
tests/: proxy_integration.rs
