[package]
name = "rustyman"
version = "0.2.0"
edition = "2021"
authors = ["Rustyman Contributors"]
description = "A high-performance MITM proxy written in Rust, inspired by mitmproxy"
license = "MIT"
repository = "https://github.com/user/rustyman"
keywords = ["proxy", "mitm", "http", "https", "debugging"]
categories = ["network-programming", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# HTTP/HTTPS
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"

# TLS/SSL for MITM
tokio-rustls = "0.25"
rustls = { version = "0.22", features = ["ring"] }
rustls-pemfile = "2.0"
rcgen = "0.12"
webpki-roots = "0.26"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Regex for header rewriting
regex = "1.10"

# Web UI
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Time
time = "0.3"

# PEM parsing
pem = "3.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.21"
mime_guess = "2.0"
futures-util = "0.3"
tokio-tungstenite = "0.21"

# Decompression
flate2 = "1.0"
brotli = "7.0"

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "rustyman"
path = "src/main.rs"
